fix footer on mobile

--- a/styles/components/vue-footer.scss
+++ b/styles/components/vue-footer.scss
@@ -26,8 +26,10 @@
   background-color: transparent;
   transition: opacity 0.5s ease, footer-easing();
   color: inherit;
-  &:hover {
-    opacity: 0.7;
+  @include media('>#{$br1}') {
+    &:hover {
+      opacity: 0.7;
+    }
   }
 }
 
@@ -68,6 +70,9 @@
   @include media('<=#{$br3}') {
     width: 60%;
   }
+  @include media('<=#{$br4}') {
+    width: 100%;
+  }
 }
 
 .f-b__item {
@@ -80,7 +85,9 @@
     position: relative;
     top: vw(2);
     @include media('<=#{$br3}') {
-      font-size: 12px;
+      font-size: 10px;
+      margin-right: 20px;
+      top: 0px;
     }
   }
   + .f-b__item {
@@ -130,6 +137,9 @@
   position: relative;
   align-items: center;
   justify-content: space-between;
+  @include media('<=#{$br3}') {
+    margin-top: 40px;
+  }
 }
 
 .footer__privacy {
